[omnibox] Fix arrow key behavior with Omnibox

This change includes 2 fixes:
 - When text and UI direction don't match, focusing the tab switch
button homes the cursor in the Omnibox. Now the cursor remains where
it is. (900244)
 - When there is autocomplete text and a tab switch button showing,
right arrow doesn't go to end. Now we check that the selection is
entirely at the end before consuming right arrow for the tab switch
button. (899597)

Bug: 899597, 900244
Change-Id: Ib5c953d22c1b80f6f516a04d8e12e7d8b5b13c19
Reviewed-on: https://chromium-review.googlesource.com/c/1312983
Commit-Queue: Kevin Bailey <krb@chromium.org>
Reviewed-by: Justin Donnelly <jdonnelly@chromium.org>
Cr-Commit-Position: refs/heads/master@{#605048}
Former-commit-id: 392fcdcbfef641404750d81a2263c379267e480e